fixed the alignment issues on home page re nav header and heading following trying to add game to page

--- a/css/home.css
+++ b/css/home.css
@@ -3,13 +3,3 @@ img {
   height: 500px;
   object-fit: cover;
 }
-
-p {
-  width: 70;
-  margin: auto;
-}
-h2 {
-  width: 70;
-  margin: auto;
-  text-align: center;
-}
